/* This files is part of the Hello World smart contract example that is included in Boilerplate.
 * It is only the definition of the contract, implementation is located in the "contract" folder
 * and tests are located in the "test" folder.
 *
 * You can use this as a basic template for new contracts.
 * 
 * When building Boilerplate or the contract project located in the "../contract/AElf.Contracts.FundingContract/" 
 * protoc (the protobuf compiler) will be invoked and this file will produce a .c.cs file and .g.cs file, in the 
 * "../contract/AElf.Contracts.FundingContract/Protobuf/Generated/" folder. 
 */

// the version of the language, use proto3 for contracts
syntax = "proto3";

// some core imports for aelf chain types
import "aelf/core.proto";
import "aelf/options.proto";

// import for using the google.protobuf.Empty type.
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// the name of the C# namespace in which the contract code will be,
// generated code will also be in this namespace.
option csharp_namespace = "AElf.Contracts.FundingContract";

// the contract definition: a gRPC service definition.
service FundingContract {

    // the full name of the C# class that will contain the state (here <namespace>.<state-class-name> format).
    option (aelf.csharp_state) = "AElf.Contracts.FundingContract.FundingContractState";

    // an action defined as a gRPC service method.
    rpc CreateProject (CreateProjectInput) returns (Project) { }
    rpc FundProject (FundInput) returns (google.protobuf.Empty) { }


    rpc GetProjectList (google.protobuf.Empty) returns (ProjectList) {
        option (aelf.is_view) = true;
    }

    rpc GetFunderList (google.protobuf.Empty) returns (FunderList) {
        option (aelf.is_view) = true;
    }
}

message ProjectList {
    repeated Project value = 1;
}

message FunderList {
    repeated FundInput value = 1;
}

message CreateProjectInput {
    string name = 1;
    string description = 2;
    int64 fundgoal = 3;
}

message Project {
    string id = 1;
    string name = 2;
    string description = 3;
    int64 fundgoal = 4;
    int64 fundcurrent = 5;
    bool isactive = 6;
}

message FundInput {
    string projectid = 1;
    string name = 2;
    int64 amount = 3;
}